--- a/About.html
+++ b/About.html
@@ -17,9 +17,9 @@
 
   <nav>
     <li><a href="MyKursusdienstWebsite.php">Home</a></li>
-    <li><a href="courses.html">Courses</a></li>
-    <li><a href="reservation.html">Reservation</a></li>
-    <li><a href="about.html">About</a></li>
+    <li><a href="courses.php">Courses</a></li>
+    <li><a href="reservation.php">Reservation</a></li>
+    <li><a href="About.html">About</a></li>
   </nav>
 
 </header>
